# vrc-autopilot

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml
app/cli/: _ctl_log.py  _logging.py  bode_margins.py  calibrate_world.py  decode_demo.py  find_button.py  map_room.py  patrol_buttons.py  probe_axes.py  sim_face.py  sim_video.py
app/control/: controller.py  guidance.py  loop_analysis.py  maneuvers.py  osc.py  pilot.py  recording.py  telemetry.py
app/mapping/: mapper.py
app/perception/: reader.py
app/spatial/: navigation.py
app/sysid/: adaptive.py  identify.py  sim_plant.py  simplant.py  worldcal.py
docs/: architecture.md  gain-tuning.md  pose-telemetry-hud-spec.md  system-identification.md  usage.md  verification.md
examples/dekapu/: main.py  room.npz
hlsl/: PoseTelemetryHUD.shader
pose_hud/: controller.py  decode.py  guidance.py  maneuvers.py  mapping.py  mapping_draw.py  mapping_live.py  mapping_render.py  navigation.py  pid.py  pilot.py  pose.py  reader.py  simplant.py  sysid.py  telemetry.py  triangulate.py
pose_hud/cli/: map_room.py  patrol_buttons.py  probe_axes.py  sim_face.py
src/vrc_autopilot/: __init__.py
src/vrc_autopilot/cli/: _keys.py  bode_margins.py  calibrate_world.py  decode_demo.py  find_button.py  log_video.py  map_room.py  probe_axes.py
src/vrc_autopilot/control/: actuator.py  controller.py  guidance.py  loop_analysis.py  maneuvers.py  osc.py  pid.py  pilot.py  recording.py
src/vrc_autopilot/core/: pose.py
src/vrc_autopilot/mapping/: draw.py  live.py  mapper.py
src/vrc_autopilot/perception/: capture.py  decode.py  encode.py  reader.py  spec.py
src/vrc_autopilot/spatial/: navigation.py  triangulate.py
src/vrc_autopilot/sysid/: adaptive.py  identify.py  sim_plant.py  worldcal.py
tests/: test_actuator.py  test_adaptive.py  test_guidance.py  test_maneuvers.py  test_mapping.py  test_navigation.py  test_osc.py  test_pid.py  test_pilot.py  test_recording.py  test_roundtrip.py  test_sysid.py  test_triangulate.py  test_worldcal.py
