[project]
name = "vrc-autopilot"
version = "0.1.0"
description = "VRChat AutoPilot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5",
    "scipy>=1.18",
    "mss>=10.2",
    "python-osc>=1.10",
    "matplotlib>=3.11",
    "pydirectinput>=1.0.4",
]

[project.scripts]
decode-demo = "app.cli.decode_demo:main"
map-room = "app.cli.map_room:main"
find-button = "app.cli.find_button:main"
patrol-buttons = "app.cli.patrol_buttons:main"
probe-axes = "app.cli.probe_axes:main"
calibrate-world = "app.cli.calibrate_world:main"
sim-face = "app.cli.sim_face:main"
bode-margins = "app.cli.bode_margins:main"
log-video = "app.cli.log_video:main"

[dependency-groups]
dev = [
    "pytest>=9.1",
    "black>=26.5",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
target-version = ["py314"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
