[project]
name = "vrc-autopilot"
dynamic = ["version"]
description = "VRChat AutoPilot"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=2.5",
    "scipy>=1.18",
    "mss>=10.2",
    "python-osc>=1.10",
    "matplotlib>=3.11",
    "pydirectinput>=1.0.4",
]

[project.urls]
Homepage = "https://github.com/njm2360/vrc-autopilot"
Repository = "https://github.com/njm2360/vrc-autopilot"

[project.scripts]
decode-demo = "vrc_autopilot.cli.decode_demo:main"
map-room = "vrc_autopilot.cli.map_room:main"
find-button = "vrc_autopilot.cli.find_button:main"
probe-axes = "vrc_autopilot.cli.probe_axes:main"
calibrate-world = "vrc_autopilot.cli.calibrate_world:main"
bode-margins = "vrc_autopilot.cli.bode_margins:main"
log-video = "vrc_autopilot.cli.log_video:main"

[dependency-groups]
dev = [
    "pytest>=9.1",
    "black>=26.5",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/vrc_autopilot/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vrc_autopilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
target-version = ["py314"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
